refactor feature flag name into release flag to avoid misinterpretation of the purpose
