# lib/go/models/flag.go
@@ -1,0 +1,77 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// Flag Flag is the basic entity with properties that feature flag holds
+// swagger:model Flag
+type Flag struct {
+
+	// ID represent the fact that this object will be persistent in the Subject
+	ID string `json:"id,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// rollout
+	Rollout *FlagRollout `json:"rollout,omitempty"`
+}
+
+// Validate validates this flag
+func (m *Flag) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateRollout(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Flag) validateRollout(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Rollout) { // not required
+		return nil
+	}
+
+	if m.Rollout != nil {
+		if err := m.Rollout.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("rollout")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Flag) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Flag) UnmarshalBinary(b []byte) error {
+	var res Flag
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
